--- a/devops.html
+++ b/devops.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zodiac/job/oRSrbfw5'>Zodiac Pool Systems LLC Careers - Software Engineer DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zodiac/job/oRSrbfw5'>Zodiac Pool Systems LLC Careers - Software Engineer DevOps</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -178,7 +178,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/Rdp1bhIBIU/DevOps-Engineer'>DevOps Engineer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/Rdp1bhIBIU/DevOps-Engineer'>DevOps Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -186,7 +186,7 @@
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vettery/jobs/1926205?gh_jid=1926205'>Job Application for Senior DevOps Engineer at Vettery</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vettery/jobs/1926205?gh_jid=1926205'>Job Application for Senior DevOps Engineer at Vettery</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -240,7 +240,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/deloitte/jobs/4495968002'>Job Application for DevOps Platform Engineer | Platform Engineering at Deloitte</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deloitte/jobs/4495968002'>Job Application for DevOps Platform Engineer | Platform Engineering at Deloitte</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -254,7 +254,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wtw.referrals.selectminds.com/jobs/devops-support-engineer-12030'>DevOps Support Engineer - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://wtw.referrals.selectminds.com/jobs/devops-support-engineer-12030'>DevOps Support Engineer - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -287,7 +287,7 @@
 <p>Oct 17, 2019 ... DevOps Engineer needed to bring revolutionary digital services to government 
 agencies and the people they serve.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://roadtrippers.applytojob.com/apply/MosM5pywIi/IT-Support-Jr-DevOps-Engineer-Togo-Group'>IT Support & Jr. DevOps Engineer - Togo Group - Togo Group ...</a></h5> 
+<h5><a href='https://roadtrippers.applytojob.com/apply/MosM5pywIi/IT-Support-Jr-DevOps-Engineer-Togo-Group'>IT Support & Jr. DevOps Engineer - Togo Group - Togo Group ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 22, 2019 ... Objective. Togo Group is seeking an IT Support & DevOps Engineer to help lead 
 internal IT operations. You will be completing tasks in support of our IT functions?...</p>
@@ -326,7 +326,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tempo.recruiterbox.com/jobs/fk06zck'>
+<h5><a href='http://tempo.recruiterbox.com/jobs/fk06zck'>
     Lead DevOps Engineer at Tempo
 </a></h5> 
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
@@ -351,7 +351,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Calgary, ABCanada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n1yaoMwo'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n1yaoMwo'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -427,7 +427,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -465,7 +465,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
