--- a/machine.html
+++ b/machine.html
@@ -77,11 +77,11 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/popsa/job/software-engineer-data-and-machine-learning/60f377ba6a24a9a49eb68e1758c26d4d/'>Software Engineer ? Data and Machine Learning at Popsa</a></h5> 
+<h5><a href='https://snap.hr/popsa/job/software-engineer-data-and-machine-learning/60f377ba6a24a9a49eb68e1758c26d4d/'>Software Engineer ? Data and Machine Learning at Popsa</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698578720-phd-in-the-area-of-knowledge-based-machine-learning-for-autonomous-driving'>Bosch Group PhD ? in the area of knowledge-based Machine Learning for Autonomous Driving | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698578720-phd-in-the-area-of-knowledge-based-machine-learning-for-autonomous-driving'>Bosch Group PhD ? in the area of knowledge-based Machine Learning for Autonomous Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -129,7 +129,7 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.featurespace.com/careers/machine-learning-engineer/'>Machine Learning Engineer | Featurespace</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -255,12 +255,12 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/bios-3/j/A55BA1465A/'>Machine Learning Developer - BIOS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/bios-3/j/A55BA1465A/'>Machine Learning Developer - BIOS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Perform research to apply machine learning (particularly deep learning, 
 reinforcement learning and transfer learning) to real world problems. Provide 
@@ -279,7 +279,7 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
+<h5><a href='https://apply.workable.com/sensynehealth/j/6358903D5A/'>Machine Learning Researcher - Sensyne Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14 hours ago ... Hands-on experience using one of the following deep learning libraries: 
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
@@ -315,7 +315,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698023336-customer-success-team-member-machine-learning-and-ai'>Bosch Group Customer Success Team Member ? Machine Learning and AI | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698023336-customer-success-team-member-machine-learning-and-ai'>Bosch Group Customer Success Team Member ? Machine Learning and AI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -340,11 +340,11 @@ to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chiselai.applytojob.com/apply/QigNU3K1y8/Machine-Learning-Scientist'>Machine Learning Scientist - Chisel AI - Career Page</a></h5> 
+<h5><a href='https://chiselai.applytojob.com/apply/QigNU3K1y8/Machine-Learning-Scientist'>Machine Learning Scientist - Chisel AI - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Apply to Machine Learning Scientist at Chisel AI in Toronto, Ontario, Canada.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en-us/rssfeed.do?functionName=viewFromLink&jobPostId=41792&localeCode=en-us&rssFeedId=2064297'>Machine Learning Ecosystem Intern - Cambridge ... - ARM</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en-us/rssfeed.do?functionName=viewFromLink&jobPostId=41792&localeCode=en-us&rssFeedId=2064297'>Machine Learning Ecosystem Intern - Cambridge ... - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Machine Learning Ecosystem Intern Cambridge; Senior Content Marketer 
 Cambridge; Senior Manager, Outbound Marketing, ML San Jose (CA); Senior 
@@ -394,7 +394,7 @@ ML;?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
+<h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
       Machine Learning Engineer - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
