--- a/deep-learning.html
+++ b/deep-learning.html
@@ -130,7 +130,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tencent/jobs/4473234002'>Job Application for Deep Learning Framework Research Engineer at Tencent</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4473234002'>Job Application for Deep Learning Framework Research Engineer at Tencent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -204,7 +204,7 @@ Skills at Crisalix.</p>
 <p>Oct 3, 2019 ... Deep Learning Engineer - Scene Understanding. San Francisco. Engineering. 
 Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?...</p>
 <hr/>
-<h5><a href='https://coverahealth.recruitee.com/o/senior-ai-scientist-deep-learning-for-natural-language-processing'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coverahealth.recruitee.com/o/senior-ai-scientist-deep-learning-for-natural-language-processing'>
       Senior AI Scientist - Deep Learning for Natural Language Processing - Covera Health
     </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
@@ -236,7 +236,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qT59VfwM&k=Job&j=ojwP9fwx&__jvst=Employee+Referral&__jvsd=syBINgwp&__jvsc=Twitter&bid=n3FMWMwH'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qT59VfwM&k=Job&j=ojwP9fwx&__jvst=Employee+Referral&__jvsd=syBINgwp&__jvsc=Twitter&bid=n3FMWMwH'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on:: 2019-10-01</p>
 <hr/>
@@ -244,7 +244,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-01</p>
 <hr/>
-<h5><a href='https://deeplite.breezy.hr/p/6f4188889d87-deep-learning-engineer'>Deep Learning Engineer at Deeplite Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deeplite.breezy.hr/p/6f4188889d87-deep-learning-engineer'>Deep Learning Engineer at Deeplite Inc.</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -333,7 +333,7 @@ with a?...</p>
 <p>Sep 9, 2019 ... We are looking for talented software engineers and computer architects to help 
 design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p>
 <hr/>
-<h5><a href='https://saicusa.workable.com/j/4A814C43A5'>SAIC Innovation Center - Jobs: Research Engineer, Computer Vision/Deep Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://saicusa.workable.com/j/4A814C43A5'>SAIC Innovation Center - Jobs: Research Engineer, Computer Vision/Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -342,7 +342,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p>Sep 9, 2019 ... We are looking for talented software engineers and computer architects to help 
 design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oDY4afwz'>Samsung Semiconductor, Inc. Careers - Deep Learning Computer Vision Researcher/ Scientist Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oDY4afwz'>Samsung Semiconductor, Inc. Careers - Deep Learning Computer Vision Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
@@ -389,7 +389,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/deep-learning-computer-vision-research-software-engineer-00054195-6825'>Deep Learning / Computer Vision Research Software Engineer - 00054195 - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/deep-learning-computer-vision-research-software-engineer-00054195-6825'>Deep Learning / Computer Vision Research Software Engineer - 00054195 - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -430,7 +430,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">Kharkiv Oblast, Ukraine</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We are offering a career opportunity combining both your passion and skills as a 
 software engineer while also allowing you to work with state-of-the-art?...</p>
@@ -490,7 +490,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
